# scratch-cpp

./: .gitignore  CMakeLists.txt  LICENSE
asio/: CMakeLists.txt  asio1.cpp  portablepipe.cpp
coro/: CMakeLists.txt
grpc/: CMakeLists.txt
io/: CMakeLists.txt  uclient.cpp  unixsocket.cpp
music/: README.md
openapi-cpp-example/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: main.rs
sfremoting/: Program.cs  sfremoting.csproj
todo-list/: CMakeLists.txt  README.md  beast_main.cpp  curlpp_main.cpp
todo-list/client/: CMakeLists.txt
todo-list/client/beast/: CMakeLists.txt
todo-list/client/beast/include/: beastclient.h
todo-list/client/beast/src/: beastclient.cpp
todo-list/client/curlpp/: CMakeLists.txt
todo-list/client/curlpp/include/: curlppclient.h
todo-list/client/curlpp/src/: curlppclient.cpp
todo-list/examples/: README.md
todo-list/examples/cpp-qt-client/: README.md
todo-list/examples/cpp-qt-client/.openapi-generator/: FILES
todo-list/examples/cpp-qt-client/client/: CMakeLists.txt  OAIEnum.h  OAIError.cpp  OAIError.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIItem.cpp  OAIItem.h  OAIObject.h  OAIServerConfiguration.h  OAIServerVariable.h  OAITodosApi.cpp  OAITodosApi.h  client.pri
todo-list/examples/cpp-restsdk/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md
todo-list/examples/cpp-restsdk/.openapi-generator/: FILES
todo-list/examples/cpp-restsdk/api/: TodosApi.cpp  TodosApi.h
todo-list/examples/cpp-restsdk/model/: Error.cpp  Error.h  Item.cpp  Item.h
todo-list/include/: model.h  todoclient.h
todo-list/json/: CMakeLists.txt
todo-list/json/include/: jsonopenapi.h
todo-list/json/providers/: CMakeLists.txt
todo-list/json/providers/nlohmann-json/: CMakeLists.txt
todo-list/json/providers/nlohmann-json/include/: openapi_nlohmann_json.h
todo-list/json/providers/nlohmann-json/src/: openapi_nlohmann_json.cpp
todo-list/json/src/: jsonopenapi.cpp
todo-list/runtime/: CMakeLists.txt  README.md
todo-list/runtime/include/: client.h  common.h  request.h  response.h
todo-list/runtime/src/: request.cpp  response.cpp
todo-list/src/: model.cpp  todoclient.cpp
winhttpapi/: CMakeLists.txt  README.md  client.cpp  client2.cpp  main.cpp
winio/: CMakeLists.txt  client.cpp  clientwrite.cpp  namedpipe.cpp  server.cpp  winunix.cpp
winpfx/: CMakeLists.txt  README.md  copied.c  export.cpp  generate.cpp  opensslgen.cpp
winpfx/dotnet/: .gitignore  Program.cs
wintls/: CMakeLists.txt  README.md  certificate.hpp  echo_client.cpp  echo_client.hpp  echo_client_original.cpp  echo_server.cpp  echo_server.hpp  echo_server_original.cpp  echo_ssl_client.cpp  echo_ssl_server.cpp  findcert.hpp
